src/iodbc_sql.h

#define SQL_HANDLE_ENV              1
#define SQL_HANDLE_DBC              2
#define SQL_HANDLE_STMT             3
/*
 *  Function return codes
 */
#define SQL_SUCCESS             0
#define SQL_SUCCESS_WITH_INFO           1
#define SQL_ERROR               (-1)
/*
 *  Flags for null-terminated strings
 */
#define SQL_NTS                 (-3)
#define SQL_NUMERIC             2
#define SQL_DECIMAL             3
#define SQL_INTEGER             4
#define SQL_SMALLINT                5
#define SQL_FLOAT               6
#define SQL_REAL                7
#define SQL_DOUBLE              8
#define SQL_NULL_HANDLE             0L
/*
 *  SQLDataSources/SQLFetchScroll - FetchOrientation
 */
#define SQL_FETCH_NEXT              1
SQLRETURN SQL_API SQLAllocEnv (
    SQLHENV     * EnvironmentHandle);
SQLRETURN SQL_API SQLAllocHandle (
    SQLSMALLINT       HandleType,
    SQLHANDLE         InputHandle,
    SQLHANDLE       * OutputHandle);
SQLRETURN SQL_API SQLAllocStmt (
    SQLHDBC       ConnectionHandle,
    SQLHSTMT        * StatementHandle);
SQLRETURN SQL_API SQLBindCol (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      ColumnNumber,
    SQLSMALLINT       TargetType,
    SQLPOINTER        TargetValue,
    SQLLEN        BufferLength,
    SQLLEN      * StrLen_or_Ind);
SQLRETURN SQL_API SQLConnect (
    SQLHDBC       ConnectionHandle,
    SQLCHAR     * ServerName,
    SQLSMALLINT       NameLength1,
    SQLCHAR     * UserName,
    SQLSMALLINT       NameLength2,
    SQLCHAR     * Authentication,
    SQLSMALLINT       NameLength3);
SQLRETURN SQL_API SQLDescribeCol (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      ColumnNumber,
    SQLCHAR     * ColumnName,
    SQLSMALLINT       BufferLength,
    SQLSMALLINT     * NameLength,
    SQLSMALLINT     * DataType,
    SQLULEN     * ColumnSize,
    SQLSMALLINT     * DecimalDigits,
    SQLSMALLINT     * Nullable);
SQLRETURN SQL_API SQLExecDirect (
    SQLHSTMT          StatementHandle,
    SQLCHAR     * StatementText,
    SQLINTEGER        TextLength);
SQLRETURN SQL_API SQLFetchScroll (
    SQLHSTMT          StatementHandle,
    SQLSMALLINT       FetchOrientation,
    SQLLEN        FetchOffset);
SQLRETURN SQL_API SQLFreeHandle (
    SQLSMALLINT       HandleType,
    SQLHANDLE         Handle);
SQLRETURN SQL_API SQLFreeStmt (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      Option);
SQLRETURN SQL_API SQLNumResultCols (
    SQLHSTMT          StatementHandle,
    SQLSMALLINT     * ColumnCount);
SQLRETURN SQL_API SQLRowCount (
    SQLHSTMT          StatementHandle,
    SQLLEN      * RowCount);
SQLRETURN SQL_API SQLSetEnvAttr (
    SQLHENV       EnvironmentHandle,
    SQLINTEGER        Attribute,
    SQLPOINTER        Value,
    SQLINTEGER        StringLength);
SQLRETURN SQL_API SQLSetStmtAttr (
    SQLHSTMT          StatementHandle,
    SQLINTEGER        Attribute,
    SQLPOINTER        Value,
    SQLINTEGER        StringLength);